<resources>
    <string name="app_name">InfoData</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm">Confirmar Contraseña</string>
    <string name="login">Acceder</string>
    <string name="email_logout">Email</string>
    <string name="signup">Registrar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="forgottext">¿Olvidaste tu contraseña?</string>
    <string name="qnewuser">¿No tienes cuenta?</string>
    <string name="newregister">Resgístrate</string>
    <string name="register">Registrar</string>
    <string name="regemail">Email</string>
    <string name="regname">Nombre</string>
    <string name="text_login">¿Ya tienes una cuenta?</string>
    <string name="signin">Iniciar Sesión</string>
    <string name="settings">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_fragment">¡Hola!</string>
    <string name="hello">Bienvenido</string>
</resources>